kubernetes/deploy/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.vandeneede.org`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
